--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f39c1dc7",
+   "id": "9320bee9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7d95ea39",
+   "id": "cd696606",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "45e590a0",
+   "id": "2661562f",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "f67f913a",
+   "id": "a7924db1",
    "metadata": {},
    "outputs": [
     {
@@ -81,8 +81,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 175,
+   "id": "3edc4c61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1867"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tr_elements)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 114,
-   "id": "c965f972",
+   "id": "4512be17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,73 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "d61175b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[None, None, 'dizziness']"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preoc(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "fa4c0f2d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'teddy'"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "id": "6631815e",
+   "execution_count": 176,
+   "id": "95631ff9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc={}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "id": "07abbd8b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'disease': 'hypertensivedisease', 'occurence': '3363', 'symptoms': ['painchest', 'shortnessof breath', 'dizziness', 'asthenia', 'fall', 'syncope', 'vertigo', 'sweat^UMLS:C0700590_sweatingincreased', 'palpitation', 'nausea', 'anginapectoris', 'pressurechest']}\n",
-      "{'disease': 'diabetes', 'occurence': '1421', 'symptoms': ['polyuria', 'polydypsia', 'shortnessof breath', 'painchest', 'asthenia', 'nausea', 'orthopnea', 'rale', 'sweat^UMLS:C0700590_sweatingincreased', 'unresponsiveness', 'mentalstatus changes', 'vertigo', 'vomiting', 'labored breathing']}\n",
-      "{'disease': 'depressionmental^UMLS:C0011581_depressive disorder', 'occurence': '1337', 'symptoms': ['feelingsuicidal', 'suicidal', 'hallucinationsauditory', 'feelinghopeless', 'weepiness', 'sleeplessness', 'motorretardation', 'irritablemood', 'blackout', 'mooddepressed', 'hallucinationsvisual', 'worry', 'agitation', 'tremor', 'intoxication', 'verbalauditory hallucinations', 'energyincreased', 'difficulty']}\n"
-     ]
-    }
-   ],
-   "source": [
+    "doc={}\n",
     "a=0\n",
-    "for j in range(1,45):\n",
+    "for j in range(1,180):\n",
     "    ans = preoc(j)\n",
     "    #print(ans)\n",
     " \n",
@@ -181,82 +143,38 @@
     "                    'symptoms':box}\n",
     "    else:\n",
     "        box.append(ans[2])\n",
-    "    \n",
+    "disease=[]\n",
+    "occurrence=[]\n",
+    "symptoms=[]\n",
     "for c in doc.values():\n",
-    "    print(c)"
+    "    sym=''\n",
+    "    for x in c['symptoms']:\n",
+    "        sym+=','+x\n",
+    "    disease.append(c['disease'])\n",
+    "    occurrence.append(int(c['occurence']))\n",
+    "    symptoms.append(sym.strip(','))\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "e66a43b1",
+   "execution_count": 177,
+   "id": "8d88fd05",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for j in range(1,len(tr_elements)):\n",
-    "    #T is our j'th row\n",
-    "    T=tr_elements[j]\n",
-    "    \n",
-    "    #If row is not of size 10, the //tr data is not from our table \n",
-    "    if len(T)!=10:\n",
-    "        break\n",
-    "    \n",
-    "    #i is the index of our column\n",
-    "    i=0\n",
-    "    \n",
-    "    #Iterate through each element of the row\n",
-    "    for t in T.iterchildren():\n",
-    "        data=t.text_content() \n",
-    "        #Check if row is empty\n",
-    "        if i>0:\n",
-    "        #Convert any numerical value to integers\n",
-    "            try:\n",
-    "                data=int(data)\n",
-    "            except:\n",
-    "                pass\n",
-    "        #Append the data to the empty list of the i'th column\n",
-    "        col[i][1].append(data)\n",
-    "        #Increment i for the next column\n",
-    "        i+=1"
+    "\n",
+    "df=pd.DataFrame(columns=['Disease', 'Occurrence', 'Symptoms'])\n",
+    "\n",
+    "df['Disease']=disease\n",
+    "df['Occurrence']=occurrence\n",
+    "df['Symptoms']=symptoms\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "9045e919",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 0, 0]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[len(C) for (title,C) in col]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "726e1c5f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Dict={title:column for (title,column) in col}\n",
-    "df=pd.DataFrame(Dict)\n",
-    "df.columns=['Disease', 'Occurrence', 'Symptom']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "78860c75",
+   "execution_count": 178,
+   "id": "15f9fb6c",
    "metadata": {},
    "outputs": [
     {
@@ -282,41 +200,169 @@
        "      <th></th>\n",
        "      <th>Disease</th>\n",
        "      <th>Occurrence</th>\n",
-       "      <th>Symptom</th>\n",
+       "      <th>Symptoms</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>hypertensivedisease</td>\n",
+       "      <td>3363</td>\n",
+       "      <td>painchest,shortnessof breath,dizziness,astheni...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>diabetes</td>\n",
+       "      <td>1421</td>\n",
+       "      <td>polyuria,polydypsia,shortnessof breath,painche...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>depressionmental^UMLS:C0011581_depressive diso...</td>\n",
+       "      <td>1337</td>\n",
+       "      <td>feelingsuicidal,suicidal,hallucinationsauditor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>coronaryarteriosclerosis^UMLS:C0010068_coronar...</td>\n",
+       "      <td>1284</td>\n",
+       "      <td>painchest,anginapectoris,shortnessof breath,hy...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>pneumonia</td>\n",
+       "      <td>1029</td>\n",
+       "      <td>cough,fever,decreasedtranslucency,shortnessof ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>failureheart congestive</td>\n",
+       "      <td>963</td>\n",
+       "      <td>shortnessof breath,orthopnea,jugularvenous dis...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>accidentcerebrovascular</td>\n",
+       "      <td>885</td>\n",
+       "      <td>dysarthria,asthenia,speechslurred,facialparesi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>asthma</td>\n",
+       "      <td>835</td>\n",
+       "      <td>wheezing,cough,shortnessof breath,chesttightne...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>myocardialinfarction</td>\n",
+       "      <td>759</td>\n",
+       "      <td>pain chest,st segment elevation,sweat^UMLS:C07...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>hypercholesterolemia</td>\n",
+       "      <td>685</td>\n",
+       "      <td>pain,pain chest,sweat^UMLS:C0700590_sweating i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>infection</td>\n",
+       "      <td>630</td>\n",
+       "      <td>fever,erythema,decreased translucency,hepatosp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>infectionurinary tract</td>\n",
+       "      <td>597</td>\n",
+       "      <td>fever,dysuria,hematuria,renal angle tenderness...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>anemia</td>\n",
+       "      <td>544</td>\n",
+       "      <td>chill,guaiac positive,monoclonal,ecchymosis,tu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>chronicobstructive airway disease</td>\n",
+       "      <td>524</td>\n",
+       "      <td>shortness of breath,wheezing,cough,dyspnea</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Disease, Occurrence, Symptom]\n",
-       "Index: []"
+       "                                              Disease  Occurrence  \\\n",
+       "0                                 hypertensivedisease        3363   \n",
+       "1                                            diabetes        1421   \n",
+       "2   depressionmental^UMLS:C0011581_depressive diso...        1337   \n",
+       "3   coronaryarteriosclerosis^UMLS:C0010068_coronar...        1284   \n",
+       "4                                           pneumonia        1029   \n",
+       "5                             failureheart congestive         963   \n",
+       "6                             accidentcerebrovascular         885   \n",
+       "7                                              asthma         835   \n",
+       "8                                myocardialinfarction         759   \n",
+       "9                                hypercholesterolemia         685   \n",
+       "10                                          infection         630   \n",
+       "11                             infectionurinary tract         597   \n",
+       "12                                             anemia         544   \n",
+       "13                  chronicobstructive airway disease         524   \n",
+       "\n",
+       "                                             Symptoms  \n",
+       "0   painchest,shortnessof breath,dizziness,astheni...  \n",
+       "1   polyuria,polydypsia,shortnessof breath,painche...  \n",
+       "2   feelingsuicidal,suicidal,hallucinationsauditor...  \n",
+       "3   painchest,anginapectoris,shortnessof breath,hy...  \n",
+       "4   cough,fever,decreasedtranslucency,shortnessof ...  \n",
+       "5   shortnessof breath,orthopnea,jugularvenous dis...  \n",
+       "6   dysarthria,asthenia,speechslurred,facialparesi...  \n",
+       "7   wheezing,cough,shortnessof breath,chesttightne...  \n",
+       "8   pain chest,st segment elevation,sweat^UMLS:C07...  \n",
+       "9   pain,pain chest,sweat^UMLS:C0700590_sweating i...  \n",
+       "10  fever,erythema,decreased translucency,hepatosp...  \n",
+       "11  fever,dysuria,hematuria,renal angle tenderness...  \n",
+       "12  chill,guaiac positive,monoclonal,ecchymosis,tu...  \n",
+       "13         shortness of breath,wheezing,cough,dyspnea  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "0d42f142",
+   "execution_count": 180,
+   "id": "ae009b45",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Disease       0\n",
+       "Occurrence    0\n",
+       "Symptoms      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2402f5df",
+   "id": "0411e26c",
    "metadata": {},
    "outputs": [],
    "source": []
