--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6ff2dec1",
+   "id": "e92a86c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "adfda65b",
+   "id": "4c92d6da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f7aec0c9",
+   "id": "3547ed7b",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "28cff317",
+   "id": "e327408f",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "662669a5",
+   "id": "4afc0cf1",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "95fe4324",
+   "id": "90703c66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "da6ef7aa",
+   "id": "3b3b4b06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "57df9af8",
+   "id": "ff8bb6f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "bbd2f127",
+   "id": "2d91ade9",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "bd22266a",
+   "id": "4174dbb8",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "16830292",
+   "id": "e2d47b96",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "2e89f5c1",
+   "id": "d09deaa5",
    "metadata": {},
    "outputs": [
     {
@@ -434,8 +434,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 198,
+   "id": "31c9d78e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'painchest,shortnessof breath,dizziness,asthenia,fall,syncope,vertigo,sweat^UMLS:C0700590_sweatingincreased,palpitation,nausea,anginapectoris,pressurechest,polyuria,polydypsia,shortnessof breath,painchest,asthenia,nausea,orthopnea,rale,sweat^UMLS:C0700590_sweatingincreased,unresponsiveness,mentalstatus changes,vertigo,vomiting,labored breathing,feelingsuicidal,suicidal,hallucinationsauditory,feelinghopeless,weepiness,sleeplessness,motorretardation,irritablemood,blackout,mooddepressed,hallucinationsvisual,worry,agitation,tremor,intoxication,verbalauditory hallucinations,energyincreased,difficulty,nightmare,unableto concentrate,homelessness,painchest,anginapectoris,shortnessof breath,hypokinesia,sweat^UMLS:C0700590_sweatingincreased,pressurechest,dyspneaon exertion,orthopnea,chesttightness,cough,fever,decreasedtranslucency,shortnessof breath,rale,productivecough,pleuriticpain,yellowsputum,breathsounds decreased,chill,rhonchus,greensputum,non-productivecough,wheezing,haemoptysis,distressrespiratory,tachypnea,malaise,nightsweat,shortnessof breath,orthopnea,jugularvenous distention,rale,dyspnea,cough,wheezing,dysarthria,asthenia,speechslurred,facialparesis,hemiplegia,unresponsiveness,seizure,numbness,wheezing,cough,shortnessof breath,chesttightness,non-productivecough,pleuriticpain,productivecough,symptomaggravating factors,distressrespiratory,pain chest,st segment elevation,sweat^UMLS:C0700590_sweating increased,shortness of breath,st segment depression,hypokinesia,angina pectoris,pressure chest,t wave inverted,orthopnea,rale,chest tightness,presence of q wave,palpitation,dyspnea,chest discomfort,bradycardia,syncope,pain,pain chest,sweat^UMLS:C0700590_sweating increased,nonsmoker,pressure chest,syncope,numbness,chest discomfort,shortness of breath,st segment depression,worry,t wave inverted,bradycardia,dyspnea,fever,erythema,decreased translucency,hepatosplenomegaly,chill,pruritus,diarrhea,abscess bacterial,swelling,pain,apyrexial,cough,fever,dysuria,hematuria,renal angle tenderness,lethargy,asthenia,hyponatremia,hemodynamically stable,distress respiratory,difficulty passing urine,mental status changes,consciousness clear,chill,guaiac positive,monoclonal,ecchymosis,tumor cell invasion,haemorrhage,pallor,asthenia,fatigue,heme positive,pain back,orthostasis,hyponatremia,dizziness,shortness of breath,pain,rhonchus,arthralgia,swelling,transaminitis,shortness of breath,wheezing,cough,dyspnea'"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ccc =[a for a in df['Symptoms']]\n",
+    "','.join(ccc)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "614e60fa",
+   "id": "97c098a3",
    "metadata": {},
    "outputs": [],
    "source": []
