--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e92a86c6",
+   "id": "0e7ec786",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4c92d6da",
+   "id": "281091dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3547ed7b",
+   "id": "6d5e65b5",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "e327408f",
+   "id": "2fe87446",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "4afc0cf1",
+   "id": "7f7a61af",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "90703c66",
+   "id": "460df0f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "3b3b4b06",
+   "id": "48d42cdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "ff8bb6f6",
+   "id": "2ea48a8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "2d91ade9",
+   "id": "275fda63",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "4174dbb8",
+   "id": "5c4b86db",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "e2d47b96",
+   "id": "a91b1591",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "d09deaa5",
+   "id": "60c1aca9",
    "metadata": {},
    "outputs": [
     {
@@ -434,30 +434,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
-   "id": "31c9d78e",
+   "execution_count": 206,
+   "id": "0500c123",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'painchest,shortnessof breath,dizziness,asthenia,fall,syncope,vertigo,sweat^UMLS:C0700590_sweatingincreased,palpitation,nausea,anginapectoris,pressurechest,polyuria,polydypsia,shortnessof breath,painchest,asthenia,nausea,orthopnea,rale,sweat^UMLS:C0700590_sweatingincreased,unresponsiveness,mentalstatus changes,vertigo,vomiting,labored breathing,feelingsuicidal,suicidal,hallucinationsauditory,feelinghopeless,weepiness,sleeplessness,motorretardation,irritablemood,blackout,mooddepressed,hallucinationsvisual,worry,agitation,tremor,intoxication,verbalauditory hallucinations,energyincreased,difficulty,nightmare,unableto concentrate,homelessness,painchest,anginapectoris,shortnessof breath,hypokinesia,sweat^UMLS:C0700590_sweatingincreased,pressurechest,dyspneaon exertion,orthopnea,chesttightness,cough,fever,decreasedtranslucency,shortnessof breath,rale,productivecough,pleuriticpain,yellowsputum,breathsounds decreased,chill,rhonchus,greensputum,non-productivecough,wheezing,haemoptysis,distressrespiratory,tachypnea,malaise,nightsweat,shortnessof breath,orthopnea,jugularvenous distention,rale,dyspnea,cough,wheezing,dysarthria,asthenia,speechslurred,facialparesis,hemiplegia,unresponsiveness,seizure,numbness,wheezing,cough,shortnessof breath,chesttightness,non-productivecough,pleuriticpain,productivecough,symptomaggravating factors,distressrespiratory,pain chest,st segment elevation,sweat^UMLS:C0700590_sweating increased,shortness of breath,st segment depression,hypokinesia,angina pectoris,pressure chest,t wave inverted,orthopnea,rale,chest tightness,presence of q wave,palpitation,dyspnea,chest discomfort,bradycardia,syncope,pain,pain chest,sweat^UMLS:C0700590_sweating increased,nonsmoker,pressure chest,syncope,numbness,chest discomfort,shortness of breath,st segment depression,worry,t wave inverted,bradycardia,dyspnea,fever,erythema,decreased translucency,hepatosplenomegaly,chill,pruritus,diarrhea,abscess bacterial,swelling,pain,apyrexial,cough,fever,dysuria,hematuria,renal angle tenderness,lethargy,asthenia,hyponatremia,hemodynamically stable,distress respiratory,difficulty passing urine,mental status changes,consciousness clear,chill,guaiac positive,monoclonal,ecchymosis,tumor cell invasion,haemorrhage,pallor,asthenia,fatigue,heme positive,pain back,orthostasis,hyponatremia,dizziness,shortness of breath,pain,rhonchus,arthralgia,swelling,transaminitis,shortness of breath,wheezing,cough,dyspnea'"
+       "114"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "def unique(list1):\n",
+    "  \n",
+    "    # initialize a null list\n",
+    "    unique_list = []\n",
+    "      \n",
+    "    # traverse for all elements\n",
+    "    for x in list1:\n",
+    "        # check if exists in unique_list or not\n",
+    "        if x not in unique_list:\n",
+    "            unique_list.append(x)\n",
+    "    # print list\n",
+    "    return unique_list\n",
+    "      \n",
     "ccc =[a for a in df['Symptoms']]\n",
-    "','.join(ccc)"
+    "len(unique(','.join(ccc).split(',')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "id": "3f2ab73a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "179"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(','.join(ccc).split(','))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97c098a3",
+   "id": "f1981954",
    "metadata": {},
    "outputs": [],
    "source": []
